--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=html/index.html"/>
+    <meta http-equiv="refresh" content="0; URL=doc/index.html"/>
   </head>
   <body>
     Automatic redirection failed, please go to
-    <a href="html/index.html">html/index.html</a>
+    <a href="doc/index.html">doc/index.html</a>
   </body>
 </html>
